--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,8 @@
     <nav>
         <a th:href="@{/login}">Login</a> |
         <a th:href="@{/register}">Register</a> |
-        <a th:href="@{/books}">Browse Books</a>
+        <a th:href="@{/books}">Browse Books</a> |
+        <a th:href="@{/collections/user/1}">Browse Collections</a> <!-- ✅ Added -->
     </nav>
 </header>
 
